--- a/Core/NightTasker.Passport.Core.Application/NightTasker.Passport.Core.Application.csproj
+++ b/Core/NightTasker.Passport.Core.Application/NightTasker.Passport.Core.Application.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.13" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
     </ItemGroup>
     
     <ItemGroup>
