--- a/Presentation/NightTasker.Passport.Presentation.WebApi/NightTasker.Passport.Presentation.WebApi.csproj
+++ b/Presentation/NightTasker.Passport.Presentation.WebApi/NightTasker.Passport.Presentation.WebApi.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <DocumentationFile>NightTasker.Passport.WebApi.xml</DocumentationFile>
+      <DocumentationFile>NightTasker.Passport.Presentation.WebApi.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
