--- a/Tests/NightTasker.Passport.Infrastructure.Identity.UnitTests/NightTasker.Passport.Infrastructure.Identity.UnitTests.csproj
+++ b/Tests/NightTasker.Passport.Infrastructure.Identity.UnitTests/NightTasker.Passport.Infrastructure.Identity.UnitTests.csproj
@@ -13,6 +13,8 @@
         <PackageReference Include="Bogus" Version="34.0.2" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1"/>
+        <PackageReference Include="MockQueryable.EntityFrameworkCore" Version="7.0.0" />
+        <PackageReference Include="MockQueryable.NSubstitute" Version="7.0.0" />
         <PackageReference Include="NSubstitute" Version="5.1.0" />
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2"/>
