--- a/src/Presentation/NightTasker.Passport.Presentation.WebApi/appsettings.json
+++ b/src/Presentation/NightTasker.Passport.Presentation.WebApi/appsettings.json
@@ -25,7 +25,7 @@
     "Enrich": ["FromLogContext", "WithThreadId", "WithMachineName"]
   },
   "ConnectionStrings": {
-    "Database": "User ID=postgres;Password=postgres;Host=127.0.0.1;Port=5433;Database=night-tasker-passport;Include Error Detail=true;"
+    "Database": "Host=127.0.0.1;Port=5432;Database=night-tasker-passport;User ID=postgres;Password=postgres;Include Error Detail=true;"
   },
   "AllowedHosts": "*",
   "IdentitySettings": {
