service name refactors

--- a/src/Presentation/NightTasker.Identity.Presentation.WebApi/NightTasker.Identity.Presentation.WebApi.csproj
+++ b/src/Presentation/NightTasker.Identity.Presentation.WebApi/NightTasker.Identity.Presentation.WebApi.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <DocumentationFile>NightTasker.Passport.Presentation.WebApi.xml</DocumentationFile>
+      <DocumentationFile>NightTasker.Identity.Presentation.WebApi.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
