--- a/src/Presentation/NightTasker.Identity.Presentation.WebApi/Properties/launchSettings.json
+++ b/src/Presentation/NightTasker.Identity.Presentation.WebApi/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "NightTasker.Passport.Profile": {
+    "NightTasker.Identity.Profile": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
