--- a/src/Tests/NightTasker.Identity.Infrastructure.Identity.UnitTests/NightTasker.Identity.Infrastructure.Identity.UnitTests.csproj
+++ b/src/Tests/NightTasker.Identity.Infrastructure.Identity.UnitTests/NightTasker.Identity.Infrastructure.Identity.UnitTests.csproj
@@ -28,7 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Infrastructure\NightTasker.Passport.Infrastructure.Identity\NightTasker.Passport.Infrastructure.Identity.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\NightTasker.Identity.Infrastructure.Identity\NightTasker.Identity.Infrastructure.Identity.csproj" />
     </ItemGroup>
 
 </Project>
