--- a/src/Core/NightTasker.Identity.Core.Application/NightTasker.Identity.Core.Application.csproj
+++ b/src/Core/NightTasker.Identity.Core.Application/NightTasker.Identity.Core.Application.csproj
@@ -18,4 +18,8 @@
     <ItemGroup>
       <ProjectReference Include="..\NightTasker.Identity.Core.Domain\NightTasker.Identity.Core.Domain.csproj" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Common\Extensions\" />
+    </ItemGroup>
 </Project>
