--- a/src/Core/NightTasker.Identity.Core.Domain/NightTasker.Identity.Core.Domain.csproj
+++ b/src/Core/NightTasker.Identity.Core.Domain/NightTasker.Identity.Core.Domain.csproj
@@ -8,7 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0" />
+        <PackageReference Include="NightTasker.Common.Core" Version="1.0.2" />
     </ItemGroup>
 
 </Project>
