--- a/src/Presentation/NightTasker.Identity.Presentation.WebApi/NightTasker.Identity.Presentation.WebApi.csproj
+++ b/src/Presentation/NightTasker.Identity.Presentation.WebApi/NightTasker.Identity.Presentation.WebApi.csproj
@@ -37,6 +37,10 @@
 
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <NoWarn>1701;1702;1705;1591</NoWarn>
     </PropertyGroup>
