--- a/src/Presentation/NightTasker.Identity.Presentation.WebApi/appsettings.json
+++ b/src/Presentation/NightTasker.Identity.Presentation.WebApi/appsettings.json
@@ -35,5 +35,12 @@
     "Audience": "MyWebsite",
     "NotBeforeMinutes": "0",
     "ExpirationMinutes": "10"
+  },
+  "RabbitMqSettings": {
+    "Host": "127.0.0.1",
+    "VirtualHost": "/",
+    "Port": "15672",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
