--- a/src/Core/NightTasker.Identity.Core.Application/NightTasker.Identity.Core.Application.csproj
+++ b/src/Core/NightTasker.Identity.Core.Application/NightTasker.Identity.Core.Application.csproj
@@ -13,13 +13,10 @@
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+        <PackageReference Include="NightTasker.Common.Messaging" Version="1.0.2" />
     </ItemGroup>
     
     <ItemGroup>
       <ProjectReference Include="..\NightTasker.Identity.Core.Domain\NightTasker.Identity.Core.Domain.csproj" />
-    </ItemGroup>
-    
-    <ItemGroup>
-      <Folder Include="Common\Extensions\" />
     </ItemGroup>
 </Project>
