add integration tests

--- a/src/Presentation/NightTasker.Identity.Presentation.WebApi/appsettings.json
+++ b/src/Presentation/NightTasker.Identity.Presentation.WebApi/appsettings.json
@@ -29,12 +29,12 @@
   },
   "AllowedHosts": "*",
   "IdentitySettings": {
-    "SecretKey": "",
-    "EncryptKey": "",
-    "Issuer": "",
-    "Audience": "",
-    "NotBeforeMinutes": "",
-    "ExpirationMinutes": ""
+    "SecretKey": "LongerThan-16Char-SecretKey-Mega",
+    "EncryptKey": "16CharEncryptKey",
+    "Issuer": "MyWebsite",
+    "Audience": "MyWebsite",
+    "NotBeforeMinutes": "0",
+    "ExpirationMinutes": "60"
   },
   "RabbitMqSettings": {
     "Host": "127.0.0.1",
